# hintech

./: .kedro.yml  README.md  kedro_cli.py  pyproject.toml  setup.cfg
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/hintech/: __init__.py  pipeline.py  run.py
src/hintech/pipelines/data_engineering/: nodes.py  pipeline.py
src/tests/: test_run.py
